--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,20 +1,12 @@
-@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic);
-@import "variables";
-@import "bootstrap-sprockets";
+@import url(https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i);
+
+@import "sb-admin/variables.scss";
+
+@import "font_awesome5_webfont";
 @import "bootstrap";
-@import "font-awesome";
+
+
 @import "toastr";
 @import "fullcalendar";
-@import 'bootstrap-datetimepicker';
 @import "jquery.minicolors";
-@import "theme";
-
-.calendar{
-  max-width: 860px;
-  margin: 0 auto;
-}
-.actions{
-  position: absolute;
-  top: 15px;
-  right: 15px;
-}
+@import "sb-admin/sb-admin-2";
