--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -10,6 +10,14 @@
 
 
         %fieldset
+          .form-group
+            %label.radio-inline
+              = f.radio_button :gender, :male
+              Mr
+            %label.radio-inline
+              = f.radio_button :gender, :female
+              Mme
+
           .row
             .col-md-6
               .form-group
