--- a/app/views/app/members/edit.html.haml
+++ b/app/views/app/members/edit.html.haml
@@ -4,6 +4,6 @@
     %small Modifier un membre
 
 %section.content
-  .box
-    .box-body
+  .card
+    .card-body
       = render 'form', member: @member
