--- a/app/views/app/members/new.html.haml
+++ b/app/views/app/members/new.html.haml
@@ -4,6 +4,6 @@
     %small Ajoute un membre
 
 %section.content
-  .box
-    .box-body
+  .card
+    .card-body
       = render 'form', member: @member
