--- a/app/views/layouts/_sidebar.html.haml
+++ b/app/views/layouts/_sidebar.html.haml
@@ -15,19 +15,9 @@
 
 %li.nav-item{class: "#{'active' if params[:controller].match(/members|families/)}"}
 
-  %a.nav-link{href: "#", 'data-toggle' => "collapse", 'data-target' => "#collapseMembers", 'aria-expanded' => "true", 'aria-controls' => "collapseMembers"}
+  %a.nav-link{href: app_members_url}
     = fa_icon "user"
     %span Membres
-
-  #collapseMembers.collapse{"aria-labelledby" => "headingTwo", "data-parent" => "#accordionSidebar"}
-    .bg-white.py-2.collapse-inner.rounded
-      %a.collapse-item{:href => app_members_url, class: "#{'active' if params[:controller].match(/members/)}"}
-        = fa_icon 'male'
-        Toutes les personnes
-
-      %a.collapse-item{:href => app_families_url, class: "#{'active' if params[:controller].match(/families/)}"}
-        = fa_icon 'sitemap'
-        Toutes les familles
 
 - if can? :read, Team || current_user.is_leader?
   %li.nav-item{class: "#{'active' if params[:controller].match(/teams/)}"}
