--- a/app/views/app/families/index.html.haml
+++ b/app/views/app/families/index.html.haml
@@ -1,43 +1,44 @@
-%section.content-header
-  %h1
-    Familles
-    %small Liste des familles
-  - if can? :create, Family
-    .actions
-      = link_to new_family_path, class: "btn btn-flat btn-primary" do
-        = fa_icon "plus"
-        Ajouter
+%h1.h3.mb-2.text-gray-800 Gestion des membres
 
-%section.content
-  .box
-    .box-body
-      %table.table.table-bordered.table-striped.table-condensed.table-xs
-        %thead
-          %tr
-            %th Nom
-            %th Téléphone
-            %th Email
-            %th Adresse
-            %th
+= render "app/members/navbar"
 
-        %tbody
-          - @families.each do |family|
-            %tr
-              %td
-                = link_to [:app, family] do
-                  = fa_icon 'eye'
-                  = family.name
-              %td= family.phone_1
-              %td= family.email
-              %td= family.full_address
-              %td
-                - if can? :update, family
-                  = link_to edit_app_family_path(family), class: "btn btn-flat btn-success btn-xs" do
-                    = fa_icon "edit"
-                    Modifier
-                - if can? :delete, family
-                  = link_to [:app, family], method: :delete, data:{confirm: "Êtes vous sûr de vouloir supprimer cette famille ?"}, class: "btn btn-flat btn-danger btn-xs" do
-                    = fa_icon "trash"
-                    Supprimer
+.card
+  .card-header.d-flex.justify-content-between.align-items-center
+    %h6.font-weight-bold.mb-0 Familles
 
-      = will_paginate @families, renderer: BootstrapPagination::Rails, next_label: ">", previous_label: "<"
+    = link_to new_app_family_path, class: 'btn btn-sm btn-success' do
+      = fa_icon 'plus'
+      Ajouter une famille
+
+  %table.table.table-bordered.table-sm.mb-0
+    %thead
+      %tr
+        %th Nom
+        %th Téléphone
+        %th Email
+        %th Adresse
+        %th
+
+    %tbody
+      - @families.each do |family|
+        %tr
+          %td
+            = link_to [:app, family] do
+              = fa_icon 'eye', class:'mr-1'
+              = family.name
+            = " - #{family.siblings.count} membre(s)"
+          %td= family.phone_1
+          %td= family.email
+          %td= family.full_address
+          %td
+            .btn-group
+              - if can? :update, family
+                = link_to edit_app_family_path(family), class: "btn btn-success btn-sm" do
+                  = fa_icon "edit"
+                  Modifier
+              - if can? :delete, family
+                = link_to [:app, family], method: :delete, data:{confirm: "Êtes vous sûr de vouloir supprimer cette famille ?"}, class: "btn btn-danger btn-sm" do
+                  = fa_icon "trash"
+                  Supprimer
+
+    = will_paginate @families, renderer: BootstrapPagination::Rails, next_label: ">", previous_label: "<"
