--- a/app/views/app/members/_form.html.haml
+++ b/app/views/app/members/_form.html.haml
@@ -31,7 +31,7 @@
       .form-group
         = f.label :birthdate
         = f.date_field :birthdate, class: "form-control", value: "#{l member.birthdate unless member.birthdate.blank?}"
-        %span.help-block Format 'jj/mm/aaaa'
+        %span.text-mute.small Format 'jj/mm/aaaa'
 
       .form-group
         = f.label :email
@@ -65,8 +65,19 @@
               = f.text_field :town, class: 'form-control'
 
     .col-md-6
-      %h3 Info sur la famille
+      %h3.h6.font-weight-bold.mb-3 Catégories
+
+      %fieldset.mb-3
+        = f.collection_check_boxes :category_ids, @categories, :id, :name do |b|
+          .form-check
+            = b.check_box class: 'form-check-input'
+            = b.label(:"data-value" => b.value, class: 'form-check-label'){b.text}
+
+
+
+      %h3.h6.font-weight-bold.mb-3 Info sur la famille
       = f.fields_for :sibling do |family_form|
+        = family_form.hidden_field :id
         .form-group
           %label Role familial :
           = family_form.select :status, family_roles, {include_blank: '-- Non renseigné --'}, class: "form-control"
