--- a/app/views/app/members/show.html.haml
+++ b/app/views/app/members/show.html.haml
@@ -1,112 +1,107 @@
-%section.content-header
-  %h1
-    Membres
-    %small Profil de la personne
-  - if can? :update, @member
-    .actions
-      = link_to edit_app_member_path(@member), class: "btn btn-flat btn-success" do
-        = fa_icon "edit"
-        Modifier
+%h1.h3.mb-2.text-gray-800 Gestion des membres
 
-%section.content
-  .row
-    .col-md-4
-      .card.card-primary
-        .card-body.card-profile
-          %h3.profile-username.text-center
-            = fa_icon "#{@member.gender}"
-            = @member.get_gender
-            = @member.name
-          - if @member.has_family?
-            %p.text-muted.text-center
-              = @member.sibling_get_status
-              de la famille
-              = link_to [:app, @member.family] do
-                = @member.family_name
+= render "app/members/navbar"
 
-          = link_to edit_app_member_path(@member), class: "btn btn-block btn-flat btn-primary" do
-            %b Editer
+.row
+  .col-md-4
+    .card.mb-3
+      .card-header
+        %h6.font-weight-bold.mb-0 Fiche profil
+      .card-body.card-profile
+        %h3.profile-username.text-center
+          = fa_icon "#{@member.gender}"
+          = @member.get_gender
+          = @member.name
+        - if @member.has_family?
+          %p.text-muted.text-center
+            = @member.sibling_get_status
+            de la famille
+            = link_to [:app, @member.family] do
+              = @member.family_name
 
-      .card.card-primary
-        .card-header.with-border
-          %h3.card-title.text-center À propos
+        = link_to edit_app_member_path(@member), class: "btn btn-block btn-flat btn-primary" do
+          %b Editer
 
-        .card-body
-          %ul.fa-ul
-            - unless @member.family.blank?
-              %li
-                = fa_icon 'sitemap fa-li'
-                Famille:
-                %span
-                  = link_to [:app, @member.family] do
-                    = @member.family_name
+    .card
+      .card-header
+        %h6.font-weight-bold.mb-0  À propos
 
+      .card-body
+        %ul.fa-ul
+          - unless @member.family.blank?
             %li
-              = fa_icon 'home fa-li'
-              Adresse:
+              = fa_icon 'sitemap fa-li'
+              Famille:
               %span
-                = link_to "http://maps.google.com/?q=#{@member.full_address}", target: "_blank" do
-                  = @member.full_address
-            %li
-              = fa_icon 'birthday-cake fa-li'
-              Date de naissance:
-              = "#{l @member.birthdate} (#{@member.age} ans)" unless @member.birthdate.blank?
+                = link_to [:app, @member.family] do
+                  = @member.family_name
 
-            %li
-              = fa_icon 'phone fa-li'
-              Téléphone:
-              %span
-                = link_to @member.phone_1, "tel:#{@member.phone_1}"
-            %li
-              = fa_icon 'envelope fa-li'
-              Email:
-              %span
-                = link_to @member.email, "mailto:#{@member.email}"
+          %li
+            = fa_icon 'home fa-li'
+            Adresse:
+            %span
+              = link_to "http://maps.google.com/?q=#{@member.full_address}", target: "_blank" do
+                = @member.full_address
+          %li
+            = fa_icon 'birthday-cake fa-li'
+            Date de naissance:
+            = "#{l @member.birthdate} (#{@member.age} ans)" unless @member.birthdate.blank?
+
+          %li
+            = fa_icon 'phone fa-li'
+            Téléphone:
+            %span
+              = link_to @member.phone_1, "tel:#{@member.phone_1}"
+          %li
+            = fa_icon 'envelope fa-li'
+            Email:
+            %span
+              = link_to @member.email, "mailto:#{@member.email}"
 
 
-    .col-md-8
-      .box.box-success
-        .box-header.with-border
-          %h3.box-title.text-center Fiche bénévole
+  .col-md-8
+    .card.mb-3
+      .card-header.with-border
+        %h6.font-weight-bold.mb-0 Fiche bénévole
 
-        .box-body
-          - if @user
+      .card-body
+        - if @user
+          %p
+            = fa_icon 'envelope'
+            Email du bénévole :
+            %small.text-muted (peut être différent de sa fiche membre)
+            %span
+              = link_to @member.email, "mailto:#{@member.email}"
+
+          .row
+            .col-md-8
+              #calendar
+            .col-md-4
+              %h3.page-header Ses équipes
+              - @user.teams.each do |team|
+                %p
+                  = link_to team do
+                    = fa_icon "square", style: "color: #{team.color}"
+                    = team.label
+        - else
+          %p Ce membre n'a pas encore de fiche bénévole.
+          - if @match
             %p
-              = fa_icon 'envelope'
-              Email du bénévole :
-              %small.text-muted (peut être différent de sa fiche membre)
-              %span
-                = link_to @member.email, "mailto:#{@member.email}"
+              Il semble qu'un bénévole utilise la même adresse email :
+              = link_to @match do
+                = "#{@match.name} (#{@match.email})"
 
-            .row
-              .col-md-8
-                #calendar
-              .col-md-4
-                %h3.page-header Ses équipes
-                - @user.teams.each do |team|
-                  %p
-                    = link_to team do
-                      = fa_icon "square", style: "color: #{team.color}"
-                      = team.label
+            = form_for @member do |f|
+              = f.hidden_field :user_id, value: @match.id
+              %button.btn.btn-warning.btn-flat{type: :submit}
+                Associer ce membre et ce bénévole
           - else
-            %p Ce membre n'a pas encore de fiche bénévole.
-            - if @match
-              %p
-                Il semble qu'un bénévole utilise la même adresse email :
-                = link_to @match do
-                  = "#{@match.name} (#{@match.email})"
-
-              = form_for @member do |f|
-                = f.hidden_field :user_id, value: @match.id
-                %button.btn.btn-warning.btn-flat{type: :submit}
-                  Associer ce membre et ce bénévole
-            - else
-              = form_for :user, :as => :user, :url => invitation_path(User), :html => {:method => :post} do |f|
-                = f.hidden_field :firstname, value: @member.firstname
-                = f.hidden_field :lastname, value: @member.lastname
-                = f.hidden_field :email, value: @member.email
-                %button.btn.btn-warning.btn-flat{type: :submit}
-                  Créer sa fiche bénévole
+            = form_for :user, :as => :user, :url => invitation_path(User), :html => {:method => :post} do |f|
+              = f.hidden_field :firstname, value: @member.firstname
+              = f.hidden_field :lastname, value: @member.lastname
+              = f.hidden_field :email, value: @member.email
+              %button.btn.btn-warning.btn-flat{type: :submit}
+                Créer sa fiche bénévole
 - if @user
   - content_for :scripts do
     = render "scripts"
