--- a/app/views/structures/new.html.haml
+++ b/app/views/structures/new.html.haml
@@ -3,6 +3,10 @@
   .col-lg-6
     .p-5
       .text-center
+
+        .px-md-5
+          = image_tag 'logo.png', class: "img-fluid"
+
         %h1.h4.text-gray-900.mb-4
           Merci d'avoir choisi
           %br
