--- a/app/views/structures/index.html.haml
+++ b/app/views/structures/index.html.haml
@@ -3,6 +3,8 @@
   .col-lg-6
     .p-5
       .text-center
+        .px-md-5
+          = image_tag 'logo.png', class: "img-fluid"
         %h1.h4.text-gray-900.mb-4
           Pour quelle église
           %br
